# schulstick-tutorial-docs

./: .gitignore  CHANGELOG.md  README.md  SUMMARY.md  book.toml  flake.nix  main.py  openapi.json  pyproject.toml  response_models.py  setup.py  tutor_view.py  vision_assistant.py
.github/workflows/: deploy.yml  release.yml
01_Quickstart/: quickstart.md
20_Folders_Sources/: folders.md
80_Glossar/: glossar.md
99_wip_spec/: intro.md
Claim/: claim.md
Folders_Sources/: folders.md
Glossar/: glossar.md
LiaScript/: liascript.md
Markdown/: markdown.md
Quickstart/: quickstart.md
Schulstick/: schulstick.md
Ziel/: ziel.md
debian/: build-packages-list.txt  changelog  control  debhelper-build-stamp  files  install  rules  schulstick-portal-config.yml  schulstick-tutor.nginx  schulstick.service
docker/: Dockerfile.build  Dockerfile.test
scripts/: build-deb.sh  run-within-xfce.sh  test-deb.sh
src/: 01_Quickstart  99_wip_spec  SUMMARY.md
src/core/: __init__.py  assets.py  build_hooks.py  compile_translations.py  config.py  launcher.py  models.py  preferences.py  unit_scanner.py
src/helper/: icon_finder.py  release.py
src/portal/: __init__.py  content.py  main.py  unit_card.py  unit_finder.py  window.py
src/portal/translations/: portal_de.ts
src/tutor/: __init__.py  main.py  tutor.py
src/tutor/translations/: tutor_de.ts
src/vision_assistant/: __init__.py  env_helper.py  main.py  preferences.py  tutor.py  vision.py
src/welcome/: __init__.py  build_translations.py  main.py  wizard.py
src/welcome/components/: star_rating.py
src/welcome/translations/: de.ts  welcome_de.qm  welcome_de.ts
tutor-next/: bun.lockb  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
tutor-next/app/: globals.css  layout.tsx
tutor-next/app/[application]/[unit]/[page]/: page.tsx
tutor-next/export/: styles.css
tutor-next/markdown/audacity/lektion4/: metadata.yml  mixing.md
tutor-next/markdown/blender/lektion1/: metadata.yml
tutor-next/markdown/inkscape/lektion1/: intro.md  metadata.yml
tutor-next/markdown/liascript/tutorial/: metadata.yml  tutorial.md
tutor-next/markdown/schulstick_tutorial/lektion1/: intro.md  metadata.yml
tutor/freecad/: index.html
wip_spec/: intro.md
