[project]
name = "schulstick"
version = "0.1.1"
description = "Interactive educational portal app for IT competency development with OER learning materials"
requires-python = ">=3.8"
dependencies = [
    "PyQt5",
    "pillow",
    "pyyaml>=6.0.1",
    "platformdirs>=2.6.0",
    "qt-material",
    "setuptools",  # For pkg_resources
    "requests>=2.31.0",
    "fuzzywuzzy>=0.18.0",
    "dataclass-wizard[yaml]>=0.22.2",
    "packaging>=23.0"  # For version parsing
]

[build-system]
requires = ["hatchling", "PyQt5"]
build-backend = "hatchling.build"


[project.gui-scripts]
vision-assistant = "vision_assistant.main:main"
welcome = "welcome.main:main"
icon-finder = "helper.icon_finder:main"
portal = "portal.main:main"
tutor = "tutor.main:main"

[project.scripts]
release = "helper.release:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_assistant", "src/welcome", "src/helper", "src/core", "src/portal", "src/tutor"]

[tool.hatch.build.targets.wheel.sources]
"src/vision_assistant/assets" = "vision_assistant/assets"
"src/welcome/translations" = "welcome/translations"
"src/portal/translations" = "portal/translations"

[tool.hatch.build]
include = [
    "src/welcome/translations/*.ts",
    "src/welcome/translations/*.qm",
    "src/vision_assistant/assets/*"
]
